<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Acitivities.LoginActivity">

    <ViewAnimator
        android:id="@+id/loginact_animator"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/loginact_login_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/custom_login_background"
            android:orientation="vertical"
            android:paddingBottom="10dp"
            android:paddingEnd="50dp"
            android:paddingStart="50dp"
            android:paddingTop="80dp"
            android:visibility="visible">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="3dp"
                android:text="@string/login_act_username_text"
                android:textColor="#aa000000"
                android:textSize="12sp" />

            <EditText
                android:id="@+id/loginact_login_username_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:background="@drawable/custom_edittext_background"
                android:fontFamily="sans-serif"
                android:hint="@string/login_act_username_hint"
                android:inputType="textPersonName"
                android:padding="10dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="3dp"
                android:text="@string/login_act_password_text"
                android:textColor="#aa000000"
                android:textSize="12sp" />

            <EditText
                android:id="@+id/loginact_login_password_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/custom_edittext_background"
                android:fontFamily="sans-serif"
                android:hint="@string/login_act_password_hint"
                android:inputType="textPassword"
                android:padding="10dp" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20dp"
                android:textColor="#fff"
                android:background="@drawable/custom_button_background"
                android:onClick="onLoginClick"
                android:text="@string/login_act_login_button" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="50dp"
                android:text="@string/login_act_toregister_text"
                android:textSize="15sp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:clickable="true"
                android:gravity="center"
                android:onClick="showRegister"
                android:orientation="horizontal"
                android:padding="10dp">

                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:src="@drawable/ic_chevron_left" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/login_act_toregister_button"
                    android:textSize="15sp" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/loginact_register_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/custom_login_background"
            android:orientation="vertical"
            android:paddingBottom="10dp"
            android:paddingEnd="50dp"
            android:paddingStart="50dp"
            android:paddingTop="80dp"
            android:visibility="visible">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="3dp"
                android:text="@string/login_act_register_username_text"
                android:textColor="#aa000000"
                android:textSize="12sp" />

            <EditText
                android:id="@+id/loginact_register_username_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:background="@drawable/custom_edittext_background"
                android:fontFamily="sans-serif"
                android:hint="@string/login_act_register_username_hint"
                android:inputType="textPersonName"
                android:padding="10dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="3dp"
                android:text="@string/login_act_register_password_text"
                android:textColor="#aa000000"
                android:textSize="12sp" />

            <EditText
                android:id="@+id/loginact_register_password_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/custom_edittext_background"
                android:fontFamily="sans-serif"
                android:hint="@string/login_act_register_password_hint"
                android:inputType="textPassword"
                android:padding="10dp" />


            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20dp"
                android:textColor="#fff"
                android:background="@drawable/custom_button_background"
                android:onClick="onRegisterClick"
                android:text="@string/login_act_register_button" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="50dp"
                android:text="@string/login_act_tologin_text"
                android:textSize="15sp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:clickable="true"
                android:gravity="center"
                android:onClick="showLogin"
                android:orientation="horizontal"
                android:padding="10dp">

                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:src="@drawable/ic_chevron_left" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/login_act_tologin_button"
                    android:textSize="15sp" />

            </LinearLayout>

        </LinearLayout>

    </ViewAnimator>



</RelativeLayout>
