<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.ncr.medicalconferencetracker.Acitivities.AdminActivities.AdminMasterActivity"
    android:id="@+id/adminmaster_drawerlayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.v7.widget.Toolbar
            android:id="@+id/adminmaster_toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary">

            <TextView
                android:id="@+id/adminmaster_toolbar_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/adminmaster_act_drawer_conference_title"
                android:textSize="20sp"
                android:textColor="#fff"/>

        </android.support.v7.widget.Toolbar>

        <FrameLayout
            android:id="@+id/adminmaster_fragmentholder"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/adminmaster_toolbar">


        </FrameLayout>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/adminmaster_drawerlist"
        android:layout_width="250dp"
        android:layout_height="match_parent"
        android:background="#bb000000"
        android:layout_gravity="start"
        android:orientation="vertical"
        android:clickable="true">

        <TextView
            android:id="@+id/adminmaster_conference_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#bb000000"
            android:padding="10dp"
            android:layout_marginTop="100dp"
            android:text="@string/adminmaster_act_drawer_conference_title"
            android:textColor="#fff"
            android:textSize="18sp"
            android:layout_marginBottom="2dp"
            android:clickable="true"
            android:onClick="showConferenceFragment"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/adminmaster_conference_button"
            android:background="#bb000000"
            android:padding="10dp"
            android:text="@string/adminmaster_act_drawer_topic_title"
            android:textColor="#fff"
            android:textSize="18sp"
            android:clickable="true"
            android:onClick="showTopicFragment"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="#bb000000"
            android:padding="10dp"
            android:layout_alignParentBottom="true"
            android:gravity="center_vertical"
            android:clickable="true"
            android:onClick="logOutAction">

            <ImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_marginEnd="10dp"
                android:layout_marginRight="10dp"
                android:src="@drawable/ic_logout_variant"/>
            
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/adminmaster_act_drawer_logout_title"
                android:textColor="#fff"
                android:textSize="18sp"/>

        </LinearLayout>



    </RelativeLayout>

</android.support.v4.widget.DrawerLayout>
